# md2gdocs

./: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  debug_script.py  md2gdocs.py  prompt.md  pyproject.toml  requirements.txt  simple_upload.py  test.md  test_events.md  test_final.py  test_markdown_parsing.py  test_simple.py
md2gdocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
