[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2gdocs"
version = "1.0.0"
description = "Convert Markdown files to Google Docs using Google Drive's built-in conversion"
authors = [{name = "Rennan", email = "rennan.leite@zappts.com.br"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "typer[all]>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
md2gdocs = "md2gdocs:app"

[project.urls]
Homepage = "https://github.com/rennanzappts/md2gdocs"

[tool.setuptools]
py-modules = ["md2gdocs"]

[tool.setuptools.package-data]
md2gdocs = ["*.md"]